--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<title>Intermediate Exercise</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+	<header>
+			<div id="logo">
+			</div>
+		<nav>
+		</nav>
+	</header>
 
 </body>
 </html>
