--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
 		</nav>
 	</header>
 
+	<aside>
+			<div id="left">
+			</div>
+			<!-- <div class="containerright">
+				<div id="right">
+				</div>
+			</div> -->
+
+	</aside>
+	<main>
+		 <div class="row">
+		 	<div class="collum1"> </div>
+		 	<div class="collum1"> </div>
+		 	<div class="collum1"> </div>
+		 </div>
+
+		 	
+		 </div>
+		
+	</main>
+
 </body>
 </html>
