creates second html and css

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 		<nav>
 		</nav>
 	</header>
-
+<main>
 	<aside>
 			<div id="left">
 			</div>
-			<!-- <div class="containerright">
+			<div class="containerright">
 				<div id="right">
 				</div>
-			</div> -->
-
-	</aside>
-	<main>
+			</div>
+			<article>
 		 <div class="row">
 		 	<div class="collum1"> </div>
 		 	<div class="collum1"> </div>
 		 	<div class="collum1"> </div>
-		 </div>
-
-		 	
+		 </div>	
 		 </div>
 		
-	</main>
+	</article>
+
+
+	</aside>
+</main>
 
 </body>
 </html>
