--- a/index2.html
+++ b/index2.html
@@ -17,10 +17,33 @@
 	<div class="left">
 	
 	</div>
+	<div class="mid">
+		<div class="container1">
+			<div class="row">
+				<div class="collum"> </div>
+		 		<div class="collum"> </div>
+		 		<div class="collum"> </div>
+		 	</div>
+		 	<br>
+		 	<div class="row">
+				<div class="collum"> </div>
+		 		<div class="collum"> </div>
+		 		<div class="collum"> </div>
+		 	</div>
+		 </div>
+		<div class="container2"></div>
+		
+	</div>
+	<div class="right">
+
+	</div>
 
 
 
 </main>
+<footer>
+	
+</footer>
 
 
 </body>
