--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 	<div class="left">
 	
 	</div>
-	<div class="mid">
+<div class="mid">
 		<div class="container1">
 			<div class="row">
 				<div class="collum"> </div>
@@ -31,13 +31,12 @@
 		 		<div class="collum"> </div>
 		 	</div>
 		 </div>
-		<div class="container2"></div>
-		
-	</div>
-	<div class="right">
-
-	</div>
-
+			<div class="container2">
+				<div class="balken"></div>
+				</div>
+			
+</div>
+<div class="right"></div>
 
 
 </main>
